error_folder/run_teacherStudent.sh_amlai07_49644.err
Traceback (most recent call last):
  File "/fhome/amlai07/Adavanced_DP/main_teacher_student.py", line 9, in <module>
    from src.utils.train_loops import baseline_train, train_teacher_student
  File "/export/fhome/amlai07/Adavanced_DP/src/utils/train_loops.py", line 69
    def 
        ^
SyntaxError: invalid syntax
